[package]
name = "binance-kline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
log = "0.4.19"
binance_spot_connector_rust = "1.0.0"
chrono = "0.4.26"
csv = "1.2.1"
